# MOPC

./: .flake8  .gitignore
cranberry/: .gitignore  README.md  default.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  yarn.nix
cranberry/prisma/: schema.prisma
cranberry/src/: App.svelte  app.css  app.d.ts  app.html  hooks.server.ts
cranberry/src/lib/: EventCard.svelte  dateUtils.ts
cranberry/src/locales/: en.json  ru.json
cranberry/src/models/: eventSchema.ts
goberry/: go.mod  go.sum  goberry.go  main.go
goberry/configs/: setup.go
goberry/helpers/: request_error.go
goberry/models/: date.go  event.go  simpledate.go
goberry/router/: router.go
rustberry/: Cargo.toml
snakeberry/: .openapi-generator-ignore  README.md  main.py  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg
snakeberry/.openapi-generator/: FILES
snakeberry/models/: http_error.py  mopc_event.py
snakeberry/openapi/: mopc_events.yml
snakeberry/routes/: event.py  events.py
snakeberry/server/: server.py
snakeberry/src/events_server/: main.py  security_api.py
snakeberry/src/events_server/apis/: default_api.py  default_api_base.py  events_api.py
snakeberry/src/events_server/models/: __init__.py  event.py  mopc_event.py  new_event.py
snakeberry/src/events_server/routes/: event.py
snakeberry/src/events_server/utils/: database.py  dev_utils.py
snakeberry/tests/: conftest.py  test_default_api.py  test_events_api.py
snakeberry/utils/: database.py  dev_utils.py
(+68 files in other folders)
