[metadata]
name = events_server
version = 0.1
description = This API provides interface for CRUD operations with various events
long_description = file: README.md
keywords = OpenAPI MOPC Events API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
